Test update project